--- a/package.json
+++ b/package.json
@@ -33,43 +33,45 @@
   ],
   "main": "lib/index.js",
   "scripts": {
-    "coverage": "nyc mocha",
+    "coverage": "nyc node ./test/run",
     "lint": "eslint lib test",
     "lint-fix": "eslint lib test --fix",
-    "test": "mocha"
+    "test": "node ./test/run"
   },
   "dependencies": {
-    "base64url": "^3.0.0",
-    "got": "^8.3.2",
+    "@panva/jose": "^0.11.4",
+    "base64url": "^3.0.1",
+    "got": "^9.6.0",
     "lodash": "^4.17.11",
-    "lru-cache": "^4.1.3",
-    "node-jose": "^1.1.0",
-    "oidc-token-hash": "^3.0.1",
-    "p-any": "^1.1.0"
+    "lru-cache": "^5.1.1",
+    "make-error": "^1.3.5",
+    "oidc-token-hash": "^3.0.2",
+    "p-any": "^2.0.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^7.1.2",
-    "@commitlint/config-conventional": "^7.1.2",
+    "@commitlint/cli": "^7.5.2",
+    "@commitlint/config-conventional": "^7.5.0",
     "chai": "^4.2.0",
-    "eslint": "^5.6.0",
+    "clear-module": "^3.1.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "husky": "^1.0.0",
-    "koa": "^2.5.3",
-    "koa-body": "^4.0.4",
-    "koa-ejs": "^4.1.2",
+    "eslint-plugin-import": "^2.16.0",
+    "husky": "^1.3.1",
+    "koa": "^2.7.0",
+    "koa-body": "^4.1.0",
+    "koa-ejs": "^4.2.0",
     "koa-router": "^7.4.0",
-    "koa-session": "^5.9.0",
-    "mocha": "^5.2.0",
-    "nock": "^10.0.0",
-    "nyc": "^13.0.1",
+    "koa-session": "^5.10.1",
+    "mocha": "^6.0.0",
+    "nock": "^10.0.6",
+    "nyc": "^13.3.0",
     "readable-mock-req": "^0.2.2",
     "request": "^2.88.0",
-    "sinon": "^7.0.0",
-    "timekeeper": "^2.1.2"
+    "sinon": "^7.3.1",
+    "timekeeper": "^2.2.0"
   },
   "engines": {
-    "node": ">=6.9.0"
+    "node": ">=11.8.0"
   },
   "commitlint": {
     "extends": [
